--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mcp-maven-deps",
-  "version": "0.1.1",
+  "version": "0.1.3",
   "description": "An MCP server that provides tools for checking Maven dependency versions",
   "type": "module",
   "bin": {
@@ -16,10 +16,12 @@
     "inspector": "npx @modelcontextprotocol/inspector build/index.js"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "0.6.0",
-    "axios": "^1.7.9"
+    "@modelcontextprotocol/sdk": "1.10.2",
+    "axios": "^1.7.9",
+    "express": "^4.18.3"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/node": "^20.11.24",
     "typescript": "^5.3.3"
   },
