--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "1.10.2",
     "axios": "^1.7.9",
-    "express": "^4.18.3"
+    "express": "^4.18.3",
+    "mcp-evals": "^1.0.18"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
