--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "1.10.2",
     "axios": "^1.7.9",
-    "express": "^4.18.3"
+    "express": "^4.18.3",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.24",
+    "@types/xml2js": "^0.4.14",
     "typescript": "^5.3.3"
   },
   "keywords": [
